tests/specs/InterfaceDeclaration.txt
# mod.ts
export interface Interface {}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> file:///mod.ts:1:1
  | 
1 | export interface Interface {}
  | ^

# output.txt
Defined in file:///mod.ts:1:1

interface Interface



# output.json
[
  {
    "kind": "interface",
    "name": "Interface",
    "location": {
      "filename": "file:///mod.ts",
      "line": 1,
      "col": 0,
      "byteIndex": 0
    },
    "declarationKind": "export",
    "interfaceDef": {
      "extends": [],
      "methods": [],
      "properties": [],
      "callSignatures": [],
      "indexSignatures": [],
      "typeParams": []
    }
  }
]
